# lute-v3-fanyingfx

./: .gitignore  .pdm-python  .pre-commit-config.yaml  README.md  README_PyPi.md  Terms.csv  apitest.http  devstart.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  coverage.yml  python-package.yml
lute/: __init__.py  app_factory.py
lute/bing/: routes.py
lute/book/: epub_utils.py  routes.py  service.py  stats.py
lute/bookimage/: routes.py
lute/config/: app_config.py  config.dev.yml  config.dev1.yml
lute/db/schema/: baseline.sql  empty.sql
lute/dict/: mdx_util.py  mdxservice.py  routes.py  services.py
lute/dict/mdict_query/: __init__.py  mdict_dir.py  mdict_query.py  pureSalsa20.py  (+5 more)
lute/language/: routes.py
lute/mdx_server/: mdx_server.py  mdx_util.py
lute/models/: book.py  language.py  sentence_note.py  setting.py  term.py
lute/parse/: base.py  english_parser.py  fugashi_parser.py  mandarin_parser.py  mecab_parser.py  morden_chinese.py  registry.py  space_delimited_parser.py  spacy_chinese_parser.py  sudachi_parser.py  uidic2ud_parser.py  unidic2ud_parser.py  unidic2ud_parser_temp.py  user_dicts.py
lute/read/: routes.py  service.py
lute/sentence/: routes.py  service.py
lute/settings/: routes.py
lute/templates/: base.html  hotkeys.html  index.html  version.html
lute/term/: datatables.py  forms.py  model.py  routes.py
lute/term_parent_map/: routes.py
lute/termimport/: routes.py
lute/themes/: routes.py
lute/translation/: baidufanyi.py  japanese_analyser.py  routes.py  services.py  youdaofanyi.py
lute/tts/: azuresdk-tts.py  edge_tts_service.py  multiplelang_detect.py  routes.py
lute/utils/: data_tables.py  english_lemma.py
tests/: conftest.py  dbasserts.py  utils.py
tests/acceptance/: book.feature  start_acceptance_app.py  test_unsupported_parser.py
tests/features/: rendering.feature  test_rendering.py
(+75 files in other folders)
